# covid19_search_tweet

./: .gitignore  README.md  pyproject.toml
src/: get_tweet.py  main.py  requirements.txt
src/datastore/: __init__.py  rss_datastore.py  tweet_datastore.py
src/rss/: __init__.py  paper.py  rss.py
src/tweet/: __init__.py  api_config.py  tweepy_wrapper.py  tweet.py
